kubernetes-manifests-infra/prometheus/alertmanager/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: alertmanager.k8s.freedom.org
      http:
        paths:
        - path: /
          backend:
            serviceName: alertmanager
            servicePort: 9093
